# seron

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  manifest.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cachix.yaml  release.yml
cmake/: QtLayerShell.cmake  version.h.in
extra/: config.jsonc
extra/extension-boilerplate/: README.md  package-lock.json  package.json
extra/extension-boilerplate/assets/: README.md  package.json
extra/schemas/: extension.json
figura/: manager.fig
scripts/: install.sh  mkappimage.sh
scripts/runners/appimage/: README.md
src/browser-extension/: CMakeLists.txt  README.md  manifest.firefox.json
src/browser-extension/chrome/: manifest.json
src/browser-extension/native-host/: com.seron.seron.chromium.json.in  com.seron.seron.firefox.json.in
src/browser-extension/src/: browser.cpp
src/cli/: CMakeLists.txt
src/cli/src/: cli.cpp  ipc-client.hpp  script-command-generator.hpp  server.cpp  server.hpp  state.hpp  theme.cpp
src/data-control-server/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/common/include/common/: common.hpp
src/lib/common/src/: common.cpp
src/lib/emoji/: CMakeLists.txt
src/lib/figura/: CMakeLists.txt
src/lib/fuzzy/: CMakeLists.txt
src/lib/linux-utils/: CMakeLists.txt
src/lib/script-command/: CMakeLists.txt
src/lib/seron-ipc/: README.md
src/lib/vicinae-ipc/: CMakeLists.txt
src/lib/xdgpp/: CMakeLists.txt  README.md
src/server/: CMakeLists.txt
src/snippet/: CMakeLists.txt  README.md
src/typescript/: README.md
(+238 files in other folders)
